--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "antd": "^5.14.0",
     "firebase": "^10.8.0",
     "next": "14.1.0",
