--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "scrollreveal": "^4.0.9"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
