--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.14.0",
+    "crypto": "^1.0.1",
     "firebase": "^10.8.0",
     "next": "14.1.0",
+    "razorpay": "^2.9.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/node": "^20",
